5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1723_2504.log
== TEST (2019-05-14 11:01:01) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))

d = 0
v = 0
l = 0

while((l < (2*v)):
		v = w * y
		l = x * z
		d = d + 1
print(d)
-- ERROR:
File "XXXX", line 14
    while((l < (2*v)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:39) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))

d = 0
v = 0
l = 0

while((l < (2 * v)):
		v = w * y
		l = x * z
		d = d + 1
print(d)
-- ERROR:
File "XXXX", line 14
    while((l < (2 * v)):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:43) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))

d = 0


while((l < (2 * v)):
		v = w * y
		l = x * z
		d = d + 1
print(d)
-- ERROR:
File "XXXX", line 13
    while((l < (2 * v)):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:55) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))

d = 0
v = 0
l = 0

while((l < (2 * v)):
		v = w * y
		l = x * z
		d = d + 1
print(d)
-- ERROR:
File "XXXX", line 14
    while((l < (2 * v)):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:03) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))

d = 0


while((l < (2 * v)):
		v = w * y
		l = x * z
		d = d + 1
print(d)
-- ERROR:
File "XXXX", line 13
    while((l < (2 * v)):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:09) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))

d = 0
l = 0
v = 0

while((l < (2 * v)):
		v = v + (w * y)
		l = l + (x * z)
		d = d + 1
print(d)
-- ERROR:
File "XXXX", line 14
    while((l < (2 * v)):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:36) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))

d = 0
l = 0
v = 0

whil((l < (2 * v):
		v = v + (w * y)
		l = l + (x * z)
		d = d + 1
print(d)
-- ERROR:
File "XXXX", line 14
    whil((l < (2 * v):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:42) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))

d = 0
l = 0
v = 0

while(l < (2 * v):
		v = v + (w * y)
		l = l + (x * z)
		d = d + 1
print(d)
-- ERROR:
File "XXXX", line 14
    while(l < (2 * v):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:55) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))

d = 0
l = 0
v = 0

while(l < 2 * v):
		v = v + (w * y)
		l = l + (x * z)
		d = d + 1
print(d)
-- ERROR:
File "XXXX", line 14
    while(l < (2 * v):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:06:30) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))

d = 0
l = 0
v = 0

while(w < 2 * x):
	r = w * y
	q = x * z
	w = w + r
	x = x + q
	d = d + 1
print(d)
-- ERROR:
File "XXXX", line 14
    while(l < (2 * v):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:07:02) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))
d = 0

while(w < 2 * x):
	r = w * y
	q = x * z
	w = w + r
	x = x + q
	d = d + 1
print(d)
-- ERROR:
File "XXXX", line 14
    while(l < (2 * v):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:07:12) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))
d = 0

while(w < 2 * x):
	r = w * y
	q = x * z
	w = w + r
	x = x + q
	d = d + 1
print(d)
-- ERROR:
File "XXXX", line 14
    while(l < (2 * v):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:07:32) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))
d = 1

while(w < 2 * x):
	r = w * y
	q = x * z
	w = w + r
	x = x + q
	d = d + 1
print(d)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:07:40) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))
d = 1

while(w < 2 * x):
	r = w * y
	q = x * z
	w = w + r
	x = x + q
	d = d + 1
print(d)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:07:49) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))
d = 0

while(w < (2 * x)):
	r = w * y
	q = x * z
	w = w + r
	x = x + q
	d = d + 1
print(d)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:09:11) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))
d = 0

while(w < (2 * x)):
	r =( w * y)/100
	q = (x * z)/100
	w = w + r
	x = x + q
	d = d + 1
print(d)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:09:36) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))
d = 0

while(x < (2 * w)):
	r =( w * y)/100
	q = (x * z)/100
	w = w + r
	x = x + q
	d = d + 1
print(d)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:09:44) 
-- CODE:
# Quantidade inicial de copias de virus
w = int(input("Insira: "))
# Quantidade inicial de leucocitos
x = int(input("Insira: "))
# Percentual de multiplicacao
y = int(input("Insira: "))
# Percentual de multiplicacao
z = int(input("Insira: "))
d = 0

while(x < (2 * w)):
	r =( w * y)/100
	q = (x * z)/100
	w = w + r
	x = x + q
	d = d + 1
print(d)
-- EXECUTION TIME:
0.161672
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
